hphp/hack/test/typecheck/goto/goto_label.php.exp
File "goto_label.php", line 4, characters 5-5:
Expected ; (Parsing[1002])
