hphp/hack/test/typecheck/goto/goto_label.php
<?hh // partial

function gotoLabel(): void {
  L0:
}

function gotoLabelWithExpression(): void {
  L0: $two = 1 + 1;
}
